# thebrana

./: .gitattributes  .gitignore  .mcp.json  .releaserc.json  .swarm  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  bootstrap.sh  deploy.sh  export-knowledge.sh  install.sh  juice_machines.py  pre-commit.sh  pyproject.toml  semantic-checks.sh  skill-catalog.md  skills-lock.json  task-guide.md  test-hooks.sh  test-memory.sh  test-semantic-checks.sh  test.sh  validate.sh  venture-guide.md
.claude/: CLAUDE.md  loop.md  task-issue-map.json  task-sync-hashes.json  tasks-archive.json  tasks.json
.claude-flow/: controller-registry-shim.js  embeddings.json
.claude-flow/agents/: store.json
.claude-flow/hive-mind/: state.json
.claude-plugin/: marketplace.json
.claude/memory/: .needs-backprop  MEMORY-snapshot.md  session-handoff.md  sessions.md
.claude/skills/: inversion  second-order-thinking
.claude/workflows/: hive-mind.js  sweep.js  verify-findings.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci.yml  release.yml
docs/: 00-user-practices.md  15-self-development-workflow.md  17-implementation-roadmap.md  18-lean-roadmap.md  19-pm-system-design.md  24-roadmap-corrections.audit-2026-03-02.md  24-roadmap-corrections.md  25-self-documentation.md  30-backlog.md  39-architecture-redesign.md  README.md  backlog-urls.md  brana-ontology.yaml  dimensions  google-sheets-mcp-setup.md  skills-system.md  spec-graph.json
docs/architecture/: ac-grammar.md  agentic-primitives.md  agents.md  bootstrap.md  building-methodology.md  context-budget.md  developer-quickstart.md  extending-agents.md  extending-hooks.md  extending-skills.md  extending.md  glossary.md  hooks.md  knowledge-system-extending.md  memory-backup.md  overview.md  plugin-lifecycle.md  plugin-structure.md  posttooluse-workaround.md  rules-design.md  skills.md  substrate-end-state.md  substrate-primitives.md  system-documentation-map.md  t-1711-simplification-audit.md  testing-validation.md  the-orbit.md  workflow-primitive.md
docs/archive/: posttooluse-workaround.md  session-aware-loop-integration.md
docs/content/: ideas.md  lens.md
docs/conventions/: ac-criteria.md
docs/decisions/: ADR-001-reconcile-command-for-spec-implementation-drift.md  ADR-002-scheduler-thin-layer-over-systemd.md  ADR-002-tasks-as-data-layer.md  ADR-003-agent-driven-task-execution.md  ADR-004-session-handoff-self-learning-loop.md  ADR-005-agentdb-v3-unified-knowledge-backend.md  ADR-006-merge-enter-into-thebrana.md  ADR-007-verify-counts-deploy-hook.md  ADR-009-test-lint-feedback-hook.md
docs/domain/: MODEL-001-brana-core.md
docs/features/: acquire-skills-guide.md  acquire-skills.md  agentdb-v3-upgrade-evaluation.md  build-loop-redesign.md  cascade-throttle.md  context-budget-real-limits.md  research-stream.md  scheduler.md  smart-tasks-add.md  staleness-and-memory-pipeline.md  task-management-system.md  tasks-portfolio.md  tasks-theme-system.md  tasks-wide-mode.md
docs/field-notes/: verify-docs-log.md
docs/guide/: cli.md  concepts.md  configuration.md  day-to-day.md  ecosystem.md  getting-started.md  hooks.md  knowledge-system.md  onboarding.md  philosophy.md  python-to-rust-migration.md  scheduler.md  skills.md  system-guide.md  troubleshooting.md  try-new-features.md  upgrading.md
docs/ideas/: agent-definition-gaps.md  agent-interaction-architecture.md  agent-observability-learning.md  agent-skills-brana-enhancements.md  ai-native-education-poc.md  (+65 more)
learning/: README.md
memory/: pattern_deferred-mcp-toolsearch-preamble_2026-05-30.md
personal/: .gitignore
scripts/: staleness-report.sh
system/: CLAUDE.md  plugin.json  settings.json  statusline.sh
system/cli/rust/: .gitignore  Cargo.toml  README.md
system/cli/rust/crates/brana-cli/: Cargo.toml
system/cli/rust/crates/brana-cli/src/: cli.rs  files.rs  fmt.rs  main.rs  query.rs  sync.rs  sync_linear.rs  tasks.rs  themes.rs  transcribe.rs  util.rs
system/cli/rust/crates/brana-cli/src/commands/: backlog.rs  close_queue.rs  decisions.rs  doctor.rs  feed.rs  files.rs  graph.rs  handoff.rs  inbox.rs  knowledge.rs  log.rs  memory.rs  misc.rs  mod.rs  notify.rs  ops.rs  orbit.rs  ratings.rs  recall.rs  reference.rs  reference.spec.md  remind.rs  run.rs  session.rs  session.spec.md  skills.rs  triage_stale.spec.md
system/cli/rust/crates/brana-cli/tests/: cli_smoke.rs  close_queue_smoke.rs  memory_smoke.rs  orbit_smoke.rs  remind_smoke.rs
system/cli/rust/crates/brana-core/: Cargo.toml
system/cli/rust/crates/brana-core/src/: knowledge_pipeline.rs  knowledge_pipeline.spec.md  lib.rs  lint.rs  memory.rs  notify.rs  queue.rs  remind.rs  ruflo.rs  scheduler.rs  search.rs  session.rs  session_initiative.rs  sync.rs  tasks.rs  tasks.spec.md  util.rs
system/cli/rust/crates/brana-mcp/: Cargo.toml
system/cli/rust/crates/brana-mcp/src/: main.rs
system/cli/rust/crates/brana-mcp/src/tools/: agy_delegate.rs  backlog_add.rs  backlog_batch.rs  backlog_burndown.rs  backlog_focus.rs  backlog_get.rs  backlog_query.rs  backlog_search.rs  backlog_set.rs  backlog_stale.rs  backlog_stats.rs  backlog_wave_add.rs  backlog_wave_get.rs  backlog_wave_list.rs  backlog_wave_set.rs  dispatch_queue_tests.rs  memory_index.rs  memory_write.rs  mod.rs  recall.rs  session_history.rs  session_read.rs  session_write.rs
system/cli/rust/crates/brana-mcp/tests/: tool_tests.rs
system/cli/rust/src/: cli.rs  files.rs  main.rs  sync.rs  tasks.rs  transcribe.rs  util.rs
system/cli/rust/src/commands/: backlog.rs  doctor.rs  feed.rs  graph.rs  handoff.rs  inbox.rs  knowledge.rs  misc.rs  mod.rs  ops.rs  run.rs  session.rs  skills.rs
tests/: test_cli.py
(+1023 files in other folders)
