[project]
name = "brana-cli"
version = "0.1.0"
description = "Brana system CLI — tasks, scheduler, and system health"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.14.0",
    "rich>=14.0.0",
]

[project.scripts]
brana = "system.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["system"]
