[package]
name = "brana"
version = "0.1.0"
edition = "2024"
description = "Brana CLI — fast standalone terminal interface"

[[bin]]
name = "brana"
path = "src/main.rs"

[[bin]]
name = "brana-query"
path = "src/query.rs"

[[bin]]
name = "brana-fmt"
path = "src/fmt.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
anyhow = "1"
feed-rs = "2"
ureq = "3"
imap = "2"
mailparse = "0.15"
native-tls = "0.2"
keyring = "3"
rpassword = "7"

[dev-dependencies]
serial_test = "3.4.0"
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
strip = true
