[workspace]
members = ["crates/brana-core", "crates/brana-cli", "crates/brana-mcp"]
resolver = "3"

[workspace.package]
version = "0.2.0"
edition = "2024"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Date/time
chrono = "0.4"

# Error handling
anyhow = "1"

# HTTP / Networking
ureq = "3"
feed-rs = "2"

# IMAP / Email
imap = "2"
mailparse = "0.15"
native-tls = "0.2"

# System
keyring = "3"
rpassword = "7"

# CLI (brana-cli only)
clap = { version = "4", features = ["derive"] }

# Testing
serial_test = "3.4.0"
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
strip = true
