[workspace]
members = ["crates/brana-core", "crates/brana-cli", "crates/brana-mcp"]
resolver = "3"

[workspace.package]
version = "0.2.0"
edition = "2024"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Date/time
chrono = { version = "0.4", features = ["serde"] }
regex-lite = "0.1"

# Error handling
anyhow = "1"

# HTTP / Networking
ureq = "3"
feed-rs = "2"

# IMAP / Email
# NOTE: imap v3 is alpha with breaking changes. Pin to v2.x until stable.
# Track: https://github.com/jonhoo/rust-imap/releases
imap = "2"
mailparse = "0.15"
native-tls = "0.2"

# System
keyring = { version = "3", features = ["linux-native"] }
rpassword = "7"

# Embedded SQLite + FTS5 full-text search (bundled = zero-ops, no system libsqlite, FTS5 compiled in)
rusqlite = { version = "0.32", features = ["bundled"] }

# CLI (brana-cli only)
clap = { version = "4", features = ["derive"] }

# MCP (brana-mcp only)
pmcp = { version = "2.1", features = ["schema-generation"] }
tokio = { version = "1", features = ["full"] }
schemars = "1.0"

# Testing
serial_test = "3.4.0"
tempfile = "3"
assert_cmd = "2"
predicates = "3"
insta = { version = "1.40", features = ["yaml"] }
assert_fs = "1"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
